--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
 
   app:
-    image: 'tinkoff-music-platform:latest'
+    image: 'tinkoff-music-platform'
     build: ./
     container_name: 'java-app'
     depends_on:
