change key and secret minio from application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,8 +23,8 @@ minio:
       minio-tinkoff-music-platform
   access:
     key:
-      minioadmin
+      dominion
     secret:
-      minioadmin
+      dominion
   url:
     https://play.min.io
