commit 1: adding all get mehods, sorted get, search

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,10 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/music-platform
     username: postgres
-    password: g12nokona
+    password: Iissupe5
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
@@ -14,3 +14,7 @@ spring:
     user:
       name: user
       password: 333
+  mvc:
+    hidden-method:
+      filter:
+        enabled: true
