add: getting files from min.io

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     password: g12nokona
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
@@ -20,10 +20,10 @@ minio:
     http://127.0.0.1:9000
   bucket:
     name:
-      tinkoff-music-platform
+      tinkoff-music
   access:
     key:
-      minioadmin
+      zhurkin
     secret:
-        minioadmin
+      g12nokona
 
