--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,20 @@
-spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/tinkofMusic
-    username: postgres
-    password: 0000
-  jpa:
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-    show-sql: true
-    defer-datasource-initialization: true
-  sql:
-    init:
-      mode: always
-
+#spring:
+#  datasource:
+#    url: jdbc:postgresql://localhost:5432/tinkofMusic
+#    username: postgres
+#    password: 0000
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#    properties:
+#      hibernate:
+#        dialect: org.hibernate.dialect.PostgreSQLDialect
+#    show-sql: true
+#    defer-datasource-initialization: true
+#  sql:
+#    init:
+#      mode: always
+#
 minio:
   url:
     http://127.0.0.1:9000
@@ -26,4 +26,12 @@ minio:
       minioadmin
     secret:
         minioadmin
+
+  logging:
+  pattern:
+    file: "%d %-5level [%thread] %logger : %msg%n"
+  level:
+    web: trace
+  file:
+    name: application-debug.log
 
