--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+application-debug.log
+application-debug.log.2023-03-01.0.gz
 
 ### STS ###
 .apt_generated
