--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     build: ./
     depends_on:
       - postgres
-#      - minio
+      - minio
     ports:
       - "8080:8080"
     environment:
@@ -28,16 +28,16 @@ services:
       POSTGRES_USER: "postgres"
       POSTGRES_PASSWORD: "g12nokona"
 
-#  minio:
-#    container_name: "minio-container"
-#    restart: on-failure
-#    image: minio/minio
-#    ports:
-#      - "9000:9000"
-#      - "9001:9001"
-#    volumes:
-#      - ./storage/minio:/data
-#    environment:
-#      MINIO_ROOT_USER: zhurkin
-#      MINIO_ROOT_PASSWORD: g12nokona
-#    command: server --console-address ":9001" /data
+  minio:
+    container_name: "minio-container"
+    restart: on-failure
+    image: minio/minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - ./storage/minio:/data
+    environment:
+      MINIO_ROOT_USER: zhurkin
+      MINIO_ROOT_PASSWORD: g12nokona
+    command: server --console-address ":9001" /data
